# zero_pass_cli

./: Cargo.toml  LICENSE  README.md
src/: error.rs  languages.rs  main.rs
src/languages/: en_us.rs  mod.rs  pt_br.rs
